crates/fixtures/tests/snapshots/hostile__content_transformed_rtl.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 368640,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 0,
          "yx": -65536,
          "xy": -65536,
          "yy": 0,
          "tx": 384000,
          "ty": 215040
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": " ",
            "glyphs": [
              {
                "id": 1,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "A",
            "glyphs": [
              {
                "id": 2,
                "x": 2625,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "דהו ",
            "glyphs": [
              {
                "id": 1,
                "x": 10104,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 0,
                "x": 12729,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 0,
                "x": 19938,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 0,
                "x": 27147,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": ". ",
            "glyphs": [
              {
                "id": 1,
                "x": 34356,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 473,
                "x": 36981,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The hall turns backwards",
            "glyphs": [
              {
                "id": 21,
                "x": 40360,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 47163,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 53933,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 59678,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 35,
                "x": 62303,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 28,
                "x": 69073,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 39,
                "x": 74806,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 39,
                "x": 78163,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 81520,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 47,
                "x": 84145,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 48,
                "x": 87806,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 45,
                "x": 94373,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 41,
                "x": 99138,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 46,
                "x": 105964,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 1,
                "x": 110853,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 29,
                "x": 113478,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 28,
                "x": 119977,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 30,
                "x": 125710,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 38,
                "x": 131083,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 50,
                "x": 137244,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 28,
                "x": 145669,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 45,
                "x": 151346,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 31,
                "x": 155998,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 46,
                "x": 162385,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "אבג ",
            "glyphs": [
              {
                "id": 1,
                "x": 167274,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 0,
                "x": 169899,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 0,
                "x": 177108,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 0,
                "x": 184317,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": ".",
            "glyphs": [
              {
                "id": 473,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "mirror keeps the words in order",
            "glyphs": [
              {
                "id": 40,
                "x": 3379,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 36,
                "x": 13528,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 16885,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 45,
                "x": 21650,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 26302,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 45,
                "x": 32486,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 37251,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 38,
                "x": 39876,
                "y": 24224,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 32,
                "x": 45812,
                "y": 24224,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 32,
                "x": 51557,
                "y": 24224,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 43,
                "x": 57189,
                "y": 24224,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 46,
                "x": 63756,
                "y": 24224,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 68645,
                "y": 24224,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 47,
                "x": 71270,
                "y": 24224,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 35,
                "x": 74931,
                "y": 24224,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 32,
                "x": 81701,
                "y": 24224,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 1,
                "x": 87446,
                "y": 24224,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 50,
                "x": 90071,
                "y": 24224,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 42,
                "x": 98451,
                "y": 24224,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 45,
                "x": 104635,
                "y": 24224,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 31,
                "x": 109287,
                "y": 24224,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 46,
                "x": 115674,
                "y": 24224,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 1,
                "x": 120563,
                "y": 24224,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 36,
                "x": 123188,
                "y": 24224,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 41,
                "x": 126545,
                "y": 24224,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 1,
                "x": 133371,
                "y": 24224,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 42,
                "x": 135996,
                "y": 24224,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 45,
                "x": 142180,
                "y": 24224,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 31,
                "x": 146832,
                "y": 24224,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 32,
                "x": 153219,
                "y": 24224,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 45,
                "x": 158964,
                "y": 24224,
                "text": {
                  "start": 30,
                  "end": 31
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
