crates/fixtures/tests/snapshots/hostile__content_unreadable_template.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Laid out on the built-in template.",
            "glyphs": [
              {
                "id": 13,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 6713,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 36,
                "x": 12446,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 31,
                "x": 15803,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 22190,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 42,
                "x": 24815,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 48,
                "x": 30886,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 47,
                "x": 37453,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 41114,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 42,
                "x": 43739,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 49923,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 56749,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 47,
                "x": 59374,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 35,
                "x": 63035,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 69805,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 1,
                "x": 75550,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 29,
                "x": 78175,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 48,
                "x": 84562,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 36,
                "x": 91129,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 39,
                "x": 94486,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 47,
                "x": 97843,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 496,
                "x": 101504,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 36,
                "x": 105018,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 41,
                "x": 108375,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 1,
                "x": 115201,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 47,
                "x": 117826,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 32,
                "x": 121487,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 40,
                "x": 127232,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 43,
                "x": 137212,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 39,
                "x": 143666,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 28,
                "x": 146910,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 47,
                "x": 152643,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 32,
                "x": 156304,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 473,
                "x": 161722,
                "y": 10707,
                "text": {
                  "start": 33,
                  "end": 34
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "A note.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 5609,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 41,
                "x": 7577,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 12696,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 17249,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 19995,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 473,
                "x": 24058,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
